; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame.c_vlc_h2_frame_data.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame.c_vlc_h2_frame_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_frame = type { i32 }

@VLC_H2_DATA_END_STREAM = common dso_local global i32 0, align 4
@VLC_H2_FRAME_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vlc_h2_frame* @vlc_h2_frame_data(i32 %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.vlc_h2_frame*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %4
  %14 = load i32, i32* @VLC_H2_DATA_END_STREAM, align 4
  br label %16

15:                                               ; preds = %4
  br label %16

16:                                               ; preds = %15, %13
  %17 = phi i32 [ %14, %13 ], [ 0, %15 ]
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* @VLC_H2_FRAME_DATA, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load i64, i64* %7, align 8
  %22 = call %struct.vlc_h2_frame* @vlc_h2_frame_alloc(i32 %18, i32 %19, i32 %20, i64 %21)
  store %struct.vlc_h2_frame* %22, %struct.vlc_h2_frame** %9, align 8
  %23 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %9, align 8
  %24 = icmp ne %struct.vlc_h2_frame* %23, null
  %25 = zext i1 %24 to i32
  %26 = call i64 @likely(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %34

28:                                               ; preds = %16
  %29 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %9, align 8
  %30 = call i32 @vlc_h2_frame_payload(%struct.vlc_h2_frame* %29)
  %31 = load i8*, i8** %6, align 8
  %32 = load i64, i64* %7, align 8
  %33 = call i32 @memcpy(i32 %30, i8* %31, i64 %32)
  br label %34

34:                                               ; preds = %28, %16
  %35 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %9, align 8
  ret %struct.vlc_h2_frame* %35
}

declare dso_local %struct.vlc_h2_frame* @vlc_h2_frame_alloc(i32, i32, i32, i64) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @memcpy(i32, i8*, i64) #1

declare dso_local i32 @vlc_h2_frame_payload(%struct.vlc_h2_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
